--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@ html, body {
 .portada {
   position: absolute; inset: 0; display: none;
   align-items: center; justify-content: center; flex-direction: column;
-  padding: 1rem; gap: .85rem; text-align: center;
+  padding: 1rem; gap: .4rem; text-align: center;
   animation: pop .6s ease-out forwards; max-height: 90%; overflow: hidden;
 }
 @keyframes pop {
@@ -74,16 +74,16 @@ html, body {
   box-shadow: 0 12px 32px rgba(0,0,0,.55);
 }
 .port-text h2 {
-  font-size: clamp(2.4rem, 6vw, 3.4rem);
-  font-weight: 800; line-height: 1.1;
+  font-size: clamp(2.8rem, 7vw, 4rem);
+  font-weight: 800; line-height: 1.15;
   text-shadow: 0 2px 6px rgba(0,0,0,.35);
 }
 .port-text p {
-  font-size: clamp(1.2rem, 3vw, 1.5rem);
-  font-weight: 600; opacity: .9; margin-top: .25rem;
+  font-size: clamp(1.5rem, 4vw, 2.2rem);
+  font-weight: 600; opacity: .9; margin-top: .3rem;
 }
 .emoji-big {
-  font-size: clamp(2rem, 5vw, 3rem);
+  font-size: clamp(1.6rem, 5vw, 2.8rem);
   filter: drop-shadow(0 4px 8px rgba(0,0,0,.3));
 }
 
@@ -110,7 +110,7 @@ html, body {
   display: none; align-items: center; justify-content: center; z-index: 110;
 }
 .cele-msg {
-  font-family: 'Poppins', sans-serif; font-size: 2rem; text-align: center;
+  font-family: 'Poppins'; font-size: 2rem; text-align: center;
   background: rgba(255,255,255,.05); padding: 2rem 3rem; border-radius: 20px;
 }
 .num { color: #30ffe4; font-weight: 900; font-size: 2.8rem; }
@@ -157,23 +157,28 @@ function adjustScale(wrap) {
 function buildPort(i) {
   const d = document.createElement("div");
   d.className = "portada";
+
   const wrap = document.createElement("div");
   wrap.className = "port-text-wrap";
+
   const box = document.createElement("div");
   box.className = "port-text";
   box.innerHTML = `<h2>${libro.titulo}</h2><p>${libro.autor}</p>`;
-  wrap.appendChild(box);
 
   const emoji = document.createElement("div");
   emoji.className = "emoji-big";
   emoji.textContent = emojis[i % emojis.length];
 
+  wrap.appendChild(box);
+  wrap.appendChild(emoji);
+
   if (isURL(libro.portada)) {
     d.append(Object.assign(new Image(), { src: libro.portada, loading: "lazy" }));
   } else {
-    d.append(wrap, emoji);
+    d.append(wrap);
     setTimeout(() => adjustScale(wrap), 0);
   }
+
   return d;
 }
 
