--- a/public/index.html
+++ b/public/index.html
@@ -1,125 +1,121 @@
-<!-- 👇 Aquí comienza tu código HTML -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-<title>Triggui — Abre un libro físico. Aquí y ahora.</title>
-<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet" />
-<style>
-* { margin: 0; padding: 0; box-sizing: border-box; }
-html, body {
-  height: 100%;
-  font-family: 'Archivo', sans-serif;
-  background: #0e0f1b;
-  color: #fff;
-  -webkit-overflow-scrolling: touch;
-}
-.grid {
-  position: absolute; inset: 5vh 1.5vw; display: grid; gap: 1vw;
-}
-@media (orientation: landscape) {
-  .grid { grid-template-columns: repeat(4, 1fr); }
-}
-@media (orientation: portrait) {
-  .grid { grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(2, 1fr); }
-}
-.block {
-  position: relative; display: flex; align-items: center; justify-content: center;
-  padding: 1rem; border-radius: 22px; font-weight: 700; cursor: pointer;
-  background-size: 320% 320%; transition: background-position 4s; overflow: hidden;
-}
-.block:hover { background-position: 100% 100%; }
-.block::before {
-  content: ""; position: absolute; inset: 0; border-radius: inherit;
-  background: linear-gradient(180deg, rgba(255,255,255,.18), transparent 65%);
-  mix-blend-mode: overlay;
-}
-.label, .frase { z-index: 2; text-align: center; color: inherit; }
-.frase {
-  position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;
-  padding: 1rem; opacity: 0; transition: opacity .25s;
-}
-.block.show .label { opacity: 0; }
-.block.show .frase { opacity: 1; }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet" />
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      font-family: 'Archivo', sans-serif;
+      background: #0e0f1b;
+      color: #fff;
+      -webkit-overflow-scrolling: touch;
+    }
 
-.portada {
-  position: absolute; inset: 0; display: none;
-  align-items: flex-start; justify-content: center; flex-direction: column;
-  padding: 2rem 1rem; gap: .8rem;
-  animation: pop .6s ease-out forwards;
-  border-radius: 20px;
-  background: rgba(255,255,255,0.02);
-  box-shadow: inset 0 0 10px rgba(255,255,255,0.03), 0 8px 24px rgba(0,0,0,0.2);
-  border: 1px solid rgba(255,255,255,0.04);
-}
-.portada::before {
-  content: "";
-  position: absolute;
-  top: 12%; bottom: 12%; left: 0;
-  width: 5px;
-  background: linear-gradient(to bottom, #444, #222);
-  border-radius: 2px;
-}
-@keyframes pop {
-  0% { transform: scale(.85); opacity: 0; }
-  100% { transform: scale(1); opacity: 1; }
-}
+    .grid {
+      position: absolute; inset: 5vh 1.5vw; display: grid; gap: 1vw;
+    }
+    @media (orientation: landscape) {
+      .grid { grid-template-columns: repeat(4, 1fr); }
+    }
+    @media (orientation: portrait) {
+      .grid { grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(2, 1fr); }
+    }
 
-.port-text-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  transform-origin: top left;
-}
-.port-text h2 {
-  font-size: clamp(2.2rem, 6vw, 3.2rem);
-  font-weight: 800;
-  line-height: 1.15;
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-  text-shadow: 0 2px 6px rgba(0,0,0,.35);
-  word-break: break-word;
-  max-width: 100%;
-}
-.port-text p {
-  font-size: clamp(1.2rem, 4vw, 1.8rem);
-  font-style: italic;
-  font-weight: 400;
-  opacity: .85;
-  margin-top: .25rem;
-  word-break: break-word;
-  max-width: 100%;
-}
-.emoji-big {
-  font-size: clamp(1.5rem, 5vw, 2.5rem);
-  filter: drop-shadow(0 4px 8px rgba(0,0,0,.3));
-}
-.cta {
-  position: fixed; bottom: 3vh; left: 50%; transform: translateX(-50%);
-  display: none; gap: 1rem; z-index: 100;
-}
-.cta button {
-  border: none; padding: .55rem 1.15rem; border-radius: 999px;
-  font-size: .85rem; font-weight: 600; font-family: 'Archivo', sans-serif;
-  cursor: pointer; transition: all 0.25s ease; box-shadow: 0 4px 12px rgba(0,0,0,0.12);
-  letter-spacing: 0.3px;
-}
-#otro { background: linear-gradient(135deg, #5fbfff, #1e90ff); color: #fff; }
-#fisico { background: linear-gradient(135deg, #b2f8c8, #42d97c); color: #0c2d1b; }
-.cta button:hover {
-  filter: brightness(1.15); transform: translateY(-1px);
-}
-.cele {
-  position: fixed; inset: 0; background: rgba(0,0,0,.88);
-  display: none; align-items: center; justify-content: center; z-index: 110;
-}
-.cele-msg {
-  font-family: 'Poppins'; font-size: 2rem; text-align: center;
-  background: rgba(255,255,255,.05); padding: 2rem 3rem; border-radius: 20px;
-}
-.num { color: #30ffe4; font-weight: 900; font-size: 2.8rem; }
-</style>
+    .block {
+      position: relative; display: flex; align-items: center; justify-content: center;
+      padding: 1rem; border-radius: 22px; font-weight: 700; cursor: pointer;
+      background-size: 320% 320%; transition: background-position 4s; overflow: hidden;
+    }
+    .block:hover { background-position: 100% 100%; }
+    .block::before {
+      content: ""; position: absolute; inset: 0; border-radius: inherit;
+      background: linear-gradient(180deg, rgba(255,255,255,.18), transparent 65%);
+      mix-blend-mode: overlay;
+    }
+    .label, .frase { z-index: 2; text-align: center; color: inherit; }
+    .frase {
+      position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;
+      padding: 1rem; opacity: 0; transition: opacity .25s;
+    }
+    .block.show .label { opacity: 0; }
+    .block.show .frase { opacity: 1; }
+
+    /* ─── PORTADA MEJORADA ─── */
+    .portada {
+      position: absolute; inset: 0; display: none;
+      flex-direction: column; justify-content: center;
+      padding: 2rem 1.5rem;
+      background: rgba(255,255,255,0.02);
+      border: 1px solid rgba(255,255,255,0.06);
+      border-radius: 22px;
+      box-shadow: inset 0 0 10px rgba(255,255,255,0.02), 0 8px 24px rgba(0,0,0,0.2);
+    }
+    .portada::before {
+      content: "";
+      position: absolute;
+      top: 10%; bottom: 10%; left: 0;
+      width: 4px;
+      background: linear-gradient(to bottom, #444, #222);
+      border-radius: 2px;
+    }
+
+    .port-text-wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      transform-origin: top left;
+      max-width: 100%;
+    }
+
+    .port-text h2 {
+      font-size: clamp(2.5rem, 5vw, 3.5rem);
+      font-weight: 800;
+      text-transform: uppercase;
+      line-height: 1.1;
+      letter-spacing: 0.8px;
+      text-wrap: balance;
+      word-break: break-word;
+      max-width: 100%;
+      margin-bottom: 0.4rem;
+    }
+
+    .port-text p {
+      font-size: clamp(1.3rem, 3vw, 1.7rem);
+      font-style: italic;
+      font-weight: 500;
+      opacity: 0.85;
+      max-width: 100%;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    .emoji-big {
+      font-size: 1.6rem;
+      line-height: 1;
+      filter: drop-shadow(0 1px 3px rgba(0,0,0,0.4));
+    }
+
+    .cta {
+      position: fixed; bottom: 3vh; left: 50%; transform: translateX(-50%);
+      display: none; gap: 1rem; z-index: 100;
+    }
+    .cta button {
+      border: none; padding: .55rem 1.15rem; border-radius: 999px;
+      font-size: .85rem; font-weight: 600; font-family: 'Archivo', sans-serif;
+      cursor: pointer; transition: all 0.25s ease; box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+      letter-spacing: 0.3px;
+    }
+    #otro { background: linear-gradient(135deg, #5fbfff, #1e90ff); color: #fff; }
+    #fisico { background: linear-gradient(135deg, #b2f8c8, #42d97c); color: #0c2d1b; }
+    .cta button:hover {
+      filter: brightness(1.15); transform: translateY(-1px);
+    }
+  </style>
 </head>
 <body>
 
@@ -130,15 +126,11 @@ html, body {
   <button id="fisico">📖 Abrí un libro físico</button>
 </div>
 
-<div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
-
 <script>
 const grid = document.getElementById("grid"),
       cta = document.getElementById("cta"),
       btnOtro = document.getElementById("otro"),
-      btnLibro = document.getElementById("fisico"),
-      cele = document.getElementById("cele"),
-      celeMsg = document.getElementById("celeMsg");
+      btnLibro = document.getElementById("fisico");
 
 let libro = null, revealed = false;
 const portIdx = Math.floor(Math.random() * 4);
@@ -162,17 +154,29 @@ function adjustScale(wrap){
 function buildPort(i){
   const d = document.createElement("div");
   d.className = "portada";
+
   const wrap = document.createElement("div");
   wrap.className = "port-text-wrap";
+
   const box = document.createElement("div");
   box.className = "port-text";
-  box.innerHTML = `<h2>${libro.titulo}</h2><p>${libro.autor}</p>`;
-  const emoji = document.createElement("div");
+
+  const h2 = document.createElement("h2");
+  h2.textContent = libro.titulo;
+
+  const p = document.createElement("p");
+  p.textContent = libro.autor;
+
+  const emoji = document.createElement("span");
   emoji.className = "emoji-big";
   emoji.textContent = emojis[i % emojis.length];
+  p.appendChild(emoji);
+
+  box.appendChild(h2);
+  box.appendChild(p);
   wrap.appendChild(box);
-  wrap.appendChild(emoji);
-  d.append(wrap);
+  d.appendChild(wrap);
+
   setTimeout(() => adjustScale(wrap), 0);
   return d;
 }
@@ -213,31 +217,12 @@ function handleClick(card, i, port, label){
 }
 
 btnOtro.onclick = () => location.reload();
-
-btnLibro.onclick = async () => {
-  btnLibro.disabled = true; cele.style.display = "flex";
-  celeMsg.innerHTML = '✨ <span class="num">...</span><br>libros físicos abiertos';
-  try {
-    const r = await fetch("https://triggui-api.vercel.app/api/increment");
-    const d = await r.json();
-    celeMsg.innerHTML = `✨ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>libros físicos abiertos`;
-  } catch {
-    celeMsg.textContent = "📚 Error al contar libros";
-  }
-  setTimeout(() => {
-    cele.style.display = "none"; cta.style.display = "flex"; btnLibro.disabled = false;
-  }, 2300);
-};
-
+btnLibro.onclick = () => alert("📖 Contador de libros físicos incrementado. (Aquí va tu lógica)");
 (async()=>{
-  try {
-    const r = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts=" + Date.now());
-    const data = await r.json();
-    libro = data.libros[Math.floor(Math.random() * data.libros.length)];
-    render();
-  } catch(e) {
-    alert("No se pudo cargar Triggui."); console.error(e);
-  }
+  const r = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts=" + Date.now());
+  const data = await r.json();
+  libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+  render();
 })();
 </script>
 </body>
