--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@ html, body {
   -webkit-overflow-scrolling: touch;
 }
 
+/* Intro */
 .intro {
   position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
   padding: 2.2rem 2.8rem; background: #191e32; border-radius: 24px; z-index: 120;
@@ -26,6 +27,7 @@ html, body {
   to { opacity: 0; visibility: hidden; transform: translate(-50%, -80%); }
 }
 
+/* Grid */
 .grid {
   position: absolute; inset: 5vh 1.5vw; display: grid; gap: 1vw;
 }
@@ -36,6 +38,7 @@ html, body {
   .grid { grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(2, 1fr); }
 }
 
+/* Blocks */
 .block {
   position: relative; display: flex; align-items: center; justify-content: center;
   padding: 1rem; border-radius: 22px; font-weight: 700; cursor: pointer;
@@ -55,13 +58,18 @@ html, body {
 .block.show .label { opacity: 0; }
 .block.show .frase { opacity: 1; }
 
+/* Portada + borde solo cuando activa */
 .portada {
   position: absolute; inset: 0; display: none;
   align-items: center; justify-content: center; flex-direction: column;
   padding: 1rem; gap: .4rem; text-align: center;
   animation: pop .6s ease-out forwards; max-height: 90%; overflow: hidden;
-  border: 1px solid rgba(255, 255, 255, 0.08);
   border-radius: 18px;
+  transition: border 0.3s ease;
+}
+.portada.activa {
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow: 0 0 0 1px rgba(255,255,255,0.04) inset;
 }
 @keyframes pop {
   0% { transform: scale(.8); opacity: 0; }
@@ -85,6 +93,7 @@ html, body {
   filter: drop-shadow(0 4px 8px rgba(0,0,0,.3));
 }
 
+/* CTA */
 .cta {
   position: fixed; bottom: 3vh; left: 50%; transform: translateX(-50%);
   display: none; gap: 1rem; z-index: 100;
@@ -101,6 +110,7 @@ html, body {
   filter: brightness(1.15); transform: translateY(-1px);
 }
 
+/* Celebración */
 .cele {
   position: fixed; inset: 0; background: rgba(0,0,0,.88);
   display: none; align-items: center; justify-content: center; z-index: 110;
@@ -211,6 +221,7 @@ function handleClick(card, i, port, label) {
   if (i === portIdx && !revealed) {
     label.style.display = "none";
     port.style.display = "flex";
+    port.classList.add("activa");
     [...grid.children].forEach((c, j) => j !== portIdx && c.classList.add("show"));
     cta.style.display = "flex";
     revealed = true;
