--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
+<!-- META OG para previsualización en WhatsApp y redes -->
+<meta property="og:title" content="Abre. Un Libro. Físico." />
+<meta property="og:description" content="Toma un libro físico que tengas cerca, ábrelo en cualquier parte, lee la primera línea que veas." />
+<meta property="og:image" content="https://triggui.com/imagotipo.png" />
+<meta property="og:url" content="https://triggui.com" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card (opcional pero útil) -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Triggui – Abre un libro físico. Aquí y ahora." />
+<meta name="twitter:description" content="Un impulso real. Nada más. Nada menos." />
+<meta name="twitter:image" content="https://triggui.com/imagotipo.png" />
+  
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet">
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
