--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@ html, body {
 </head>
 <body>
 
-<div class="intro">¿Qué sientes?</div>
+<div class="intro">Elige la palabra que quieras y encuentra un libro.</div>
 <div class="grid" id="grid"></div>
 
 <div class="cta" id="cta">
