--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@ html, body {
 <div class="grid" id="grid"></div>
 
 <div class="cta" id="cta">
-  <button id="otro">🎲 Quiero otro digital</button>
+  <button id="otro">💖 Me gusta, quiero donar</button>
   <button id="fisico">📖 Abrí un libro físico</button>
 </div>
 
